<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="enter_amount">"Enter Bill Amount"</string>
    <string name="PercentageText">0.00%</string>
    <string name="tip">Tip:</string>
    <string name="tipText">$0.00</string>
    <string name="totalText">$0.00</string>
    <string name="total">Total:</string>
    <string name="per_person_total">Per Person Total</string>
    <string name="no">No</string>
    <string name="number_of_people">Number of people</string>
    <string name="total_round">Total</string>
    <string name="tip_round">Tip</string>
    <string-array name="numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>

    </string-array>
</resources>
